# MUSIC

./: .gitignore  .travis.yml  AUTHORS  BUGS  ChangeLog  INSTALL  Makefile.am  NEWS  PORTING  README  RELEASE  TODO  acinclude.m4  aclocal.sh  autogen.sh  build.sh  codemeta.json  configure.ac
.github/workflows/: ebrains.yaml
debian/: changelog  control  copyright  libmusic-dev.dirs  libmusic-dev.examples  libmusic1v5.docs  music-bin.install  music-doc.dirs  music-doc.doc-base  music-doc.docs  python3-music.docs  python3-music.examples  python3-music.install  rules
doc/: .gitignore  ChangeLog  Makefile.am  eventcounter.1  messagesource.1  music-c-int.h  music-manual.tex  music-rfc.bib  music-rfc.tex  music.1  music_tests.1  musicrun.1  scheduling-algorithm.py  scheduling.text
doc/figures/: .gitignore  dataconvergence.asy  datamapping.asy  messysim.asy  multisim.asy  receiverport.asy  remapping.asy  remapping2.asy  senderport.asy  ticklogic.asy  ticklogic2.asy  timeline.asy
examples/: .gitignore  Makefile.am  README  demo.music  demolarge.music  gdb.gdb  makeNeuronGrid.m  makeTestSpikes.m  messages.music  neuronGrid.data  neuronGridLARGE.data  neuronGridPlane.data  run_demo.zsh  test.music  test.music0.out  testconsumer  testconsumer.cc  testproducer  testproducer.cc  viewevents.music  vieweventsLARGE.music  vieweventsPlane.music  waveconsumer.cc  waveproducer.cc  wavetest.music
extras/: Makefile.am  music_mpirun
mpidep/: ChangeLog  Makefile.am  mpidep.cc  mpidep.hh
music/: .gitignore  Makefile.am
music-config/: ChangeLog  Makefile.am  __init__.py  config.py  get_rank.py  predict_rank.py.in
pymusic/: .gitignore  Makefile.am  mpi_compat.h  pybuffer.cpp  pybuffer.pxd  pybuffer.pyx  pyconfig.pxi  pymusic.cpp  pymusic.pxd  pymusic.pyx  setup.py.in  tests.py
pymusic-old/: Makefile  README  helloworld  helloworld.music  helloworld.py  late.h  late.pxd  late.pyx  late_impl.h  music.pyx  port.pxd  port.pxi  python_main.c  runtime.pxd  runtime.pxi  setup.pxd  setup.pxi  setup.py  test.py
pymusic/examples/: Makefile.am  event.music  eventlogger.py  eventsource.py  helloworld.music  message.music  message.py  messagelogger.py  messagesource.py  receivers.py  senders.py  test.music  testsink.py  testsource.py
pymusic/looseversion/: LICENSE  __init__.py
pymusic/music/: __init__.py  music_c.h  pybuffer.pxd  pymusic.pxd  pymusic_c.h
ros/: Makefile.am  README.md
ros/adapters/: Makefile.am  connect.cpp  connect.h  ros_command_adapter.cpp  ros_command_adapter.h  ros_sensor_adapter.cpp  ros_sensor_adapter.h  rtclock.cpp  rtclock.h
ros/decoder/: Makefile.am  linear_readout.cpp  linear_readout.h
ros/encoder/: Makefile.am  iaf_neuron.h  nef_encoder.cpp  nef_encoder.h  poisson_encoder.cpp  poisson_encoder.h  rate_encoder.cpp  rate_encoder.h
ros/examples/: README.txt
ros/examples/braitenberg3/: braitenberg3.music  braitenberg3_pyNEST.py
rudeconfig/: ChangeLog  Makefile.am
rudeconfig/man3/: rudeconfig.3
rudeconfig/src/: AbstractData.cpp  AbstractOrganiser.cpp  AbstractOrganiser.h  AbstractParser.cpp  AbstractWriter.cpp  Base64Encoder.cpp  Comment.cpp  ConfigImpl.cpp  ConfigImpl.h  DataLine.cpp  File.cpp  File.h  KeyValue.cpp  ParserJuly2004.cpp  RealOrganiser.cpp  RealOrganiser.h  Section.cpp  Section.h  SourceDest.cpp  SourceDest.h  WhiteSpace.cpp  Writer.cpp  config.cpp  config.h
src/: .gitignore  BIFO.cc  ChangeLog  FIBO.cc  Makefile.am  application.cc  application.cpp  application_map.cc  application_mapper.cc  array_data.cc  clock.cc  collector.cc  configuration.cc  connection.cc  connectivity.cc  connector.cc  distributor.cc  error.cc  event_data.cc  event_router.cc  event_routing_map.cc  index_map.cc  index_map_factory.cc  interval.cc  ioutils.cc  linear_index.cc  memory.cc  mpi_utils.cc  multibuffer.cc  music-c-c.c  music-c.cc  music-c.h  music.hh  music_context.cc  music_launcher.cpp  parse.cc  permutation_index.cc  port.cc  port_manager.cc  port_manager.cpp  (+11 more)
src/music/: .gitignore  BIFO.hh  FIBO.hh  application.h  application.hh  application_graph.hh  application_map.hh  application_mapper.hh  array_data.hh  clock.hh  collector.hh  communication.hh  configuration.hh  connection.hh  connectivity.hh  connector.hh  cont_data.hh  data_map.hh  debug.hh  distributor.hh  error.hh  event.hh  event_router.hh  event_routing_map.hh  factory.hh  index_map.hh  index_map_factory.hh  interval.hh  interval_table.hh  interval_tree.hh  ioutils.hh  linear_index.hh  memory.hh  message.hh  misc.hh  mpi_utils.hh  multibuffer.hh  music-config.hh.in  music_context.hh  music_launcher.hh  (+18 more)
testsuite/: .gitignore  Makefile.am  music_tests.in
testsuite/sanitytests/: .gitignore  Makefile.am  chain.test  clocksource.cc  cloop.test  const.test  constsource.cc  contclock.test  contdelay.cc  divergence.test  eventdelay.cc  events.test  fork.test  launchtest.cc  launchtest.test  loop.test  messages.test  multicomm.test  multiport.cc  multiport.test  run_test
testsuite/test_old/: ChangeLog  chain.music  cloop.music  coba.cc  const.music  contclock.music  divergence.music  events.music  events.py  fork.music  launcher.cc  launchtest.music  loop.music  multicomm.music  multipoisson2.music  multiport.music  parsetest.cc  poisson.music  poisson2.music
testsuite/unittests/catch/: .gitignore  Makefile.am  catch.hpp  test_ag.cc
utils/: .gitignore  ChangeLog  Makefile.am  VisualiseNeurons.cpp  VisualiseNeurons.h  contsink.cc  datafile.cc  datafile.h  eventcounter.cc  eventgenerator.cc  eventlogger.cc  eventselect.cc  eventsink.cc  eventsource.cc  messagesource.cc  music.cc  viewevents.cpp
