## Process this file with Automake to create Makefile.in

exdatadir = $(datadir)/@PACKAGE@-@PACKAGE_VERSION@/examples/python
dist_exdata_DATA = eventlogger.py   \
		   event.music      \
		   eventsource.py   \
		   helloworld.music \
		   messagelogger.py \
		   message.music    \
		   message.py       \
		   messagesource.py \
		   receivers.py     \
		   senders.py       \
		   test.music       \
		   testsink.py      \
		   testsource.py
